Try to fix scss

--- a/tools/timer.html
+++ b/tools/timer.html
@@ -18,7 +18,7 @@ an update interval of 100 milliseconds.
         <button id="start-stop-timer"
             class="button button--outline-success button--rounded timer__controls">Start</button>
         <button id="reset-timer" class="button button--outline-warning button--rounded timer__controls">Reset</button>
-        <input type="text" id="start-time-input" class="input timer__controls" />
+        <input type="text" id="start-time-input" class="my-input timer__controls" />
         <button id="count-up-down" class="button button--info button--circle"><i class="fas fa-arrow-up"></i></button>
     </div>
     <br />
